refactor: Replace Arrays.asList() with List.of() in test classes (#2087)
---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: kthoms <265597+kthoms@users.noreply.github.com>