@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.dmn.engine.api;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -262,7 +261,7 @@ class DmnDecisionTableResultTest extends DmnEngineTest {
   // helper methods
 
   private DmnDecisionTableResult evaluateWithMatchingRules(String... matchingRules) {
-    List<String> matchingRulesList = Arrays.asList(matchingRules);
+    List<String> matchingRulesList = List.of(matchingRules);
     variables.putValue(NO_OUTPUT_VALUE, matchingRulesList.contains(NO_OUTPUT_VALUE));
     variables.putValue(SINGLE_OUTPUT_VALUE, matchingRulesList.contains(SINGLE_OUTPUT_VALUE));
     variables.putValue(MULTIPLE_OUTPUT_VALUES, matchingRulesList.contains(MULTIPLE_OUTPUT_VALUES));
