@@ -15,8 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.rest.optimize;
+import java.util.List;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import jakarta.ws.rs.core.MediaType;
@@ -64,7 +64,7 @@ class OptimizeVariableUpdateRestServiceTest extends AbstractRestServiceTest {
     mockedOptimizeService = mock(OptimizeService.class);
     ProcessEngineConfigurationImpl mockedConfig = mock(ProcessEngineConfigurationImpl.class);
 
-    when(mockedOptimizeService.getHistoricVariableUpdates(any(Date.class), any(Date.class), anyBoolean(), anyInt())).thenReturn(Arrays.asList(historicUpdateMock));
+    when(mockedOptimizeService.getHistoricVariableUpdates(any(Date.class), any(Date.class), anyBoolean(), anyInt())).thenReturn(List.of(historicUpdateMock));
 
     namedProcessEngine = getProcessEngine(MockProvider.EXAMPLE_PROCESS_ENGINE_NAME);
     when(namedProcessEngine.getProcessEngineConfiguration()).thenReturn(mockedConfig);
