@@ -15,7 +15,6 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.test.api.identity;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -73,7 +72,7 @@ class AuthorizationServiceWithEnabledAuthorizationTest {
     Resource resource1 = TestResource.RESOURCE1;
     Resource resource2 = TestResource.RESOURCE2;
 
-    List<String> jonnysGroups = Arrays.asList("sales", "marketing");
+    List<String> jonnysGroups = List.of("sales", "marketing");
     List<String> someOneElsesGroups = Collections.singletonList("marketing");
 
     // if no authorizations are in Db, nothing is authorized
@@ -104,7 +103,7 @@ class AuthorizationServiceWithEnabledAuthorizationTest {
     localRevoke.removePermission(READ);
     authorizationService.saveAuthorization(localRevoke);
 
-    List<String> jonnysGroups = Arrays.asList("sales", "marketing");
+    List<String> jonnysGroups = List.of("sales", "marketing");
     List<String> someOneElsesGroups = Collections.singletonList("marketing");
 
     // jonny does not have ALL permissions
@@ -142,7 +141,7 @@ class AuthorizationServiceWithEnabledAuthorizationTest {
     groupRevoke.removePermission(READ);
     authorizationService.saveAuthorization(groupRevoke);
 
-    List<String> jonnysGroups = Arrays.asList("sales", "marketing");
+    List<String> jonnysGroups = List.of("sales", "marketing");
     List<String> someOneElsesGroups = Collections.singletonList("marketing");
 
     // jonny does not have ALL permissions if queried with groups
@@ -258,7 +257,7 @@ class AuthorizationServiceWithEnabledAuthorizationTest {
     userGrant.addPermission(READ);
     authorizationService.saveAuthorization(userGrant);
 
-    List<String> jonnysGroups = Arrays.asList("sales", "marketing");
+    List<String> jonnysGroups = List.of("sales", "marketing");
     List<String> someOneElsesGroups = Collections.singletonList("marketing");
 
     // jonny can read
