@@ -17,7 +17,6 @@
 package org.operaton.bpm.engine.test.api.multitenancy.query;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.AfterEach;
@@ -172,7 +171,7 @@ class MultiTenancyTaskQueryTest {
 
   @Test
   void testQueryAuthenticatedTenant() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     TaskQuery query = taskService.createTaskQuery();
 
@@ -184,7 +183,7 @@ class MultiTenancyTaskQueryTest {
 
   @Test
   void testQueryAuthenticatedTenants() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE, TENANT_TWO));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE, TENANT_TWO));
 
     TaskQuery query = taskService.createTaskQuery();
 
