@@ -16,7 +16,6 @@
  */
 package org.operaton.bpm.engine.test.api.multitenancy.query.history;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -168,7 +167,7 @@ class MultiTenancyHistoricDecisionInstanceQueryTest {
   @Test
   void shouldQueryAuthenticatedTenant() {
     // given
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     // when
     HistoricDecisionInstanceQuery query = historyService.createHistoricDecisionInstanceQuery();
@@ -184,7 +183,7 @@ class MultiTenancyHistoricDecisionInstanceQueryTest {
   @Test
   void shouldQueryAuthenticatedTenants() {
     // given
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE, TENANT_TWO));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE, TENANT_TWO));
 
     // when
     HistoricDecisionInstanceQuery query = historyService.createHistoricDecisionInstanceQuery();
