@@ -15,8 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.engine.test.api.multitenancy.tenantcheck;
+import java.util.List;
 
-import java.util.Arrays;
 import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -91,7 +91,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
 
   @Test
   void manuallyStartCaseExecutionWithAuthenticatedTenant() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     caseService.manuallyStartCaseExecution(caseExecutionId);
 
@@ -128,7 +128,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
 
   @Test
   void disableCaseExecutionWithAuthenticatedTenant() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     caseService.disableCaseExecution(caseExecutionId);
 
@@ -171,7 +171,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
   void reenableCaseExecutionWithAuthenticatedTenant() {
     caseService.disableCaseExecution(caseExecutionId);
 
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     caseService.reenableCaseExecution(caseExecutionId);
 
@@ -214,7 +214,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
   void completeCaseExecutionWithAuthenticatedTenant() {
     caseService.manuallyStartCaseExecution(caseExecutionId);
 
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     caseService.completeCaseExecution(caseExecutionId);
 
@@ -259,7 +259,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
   void closeCaseInstanceWithAuthenticatedTenant() {
     caseService.completeCaseExecution(caseInstanceId);
 
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     caseService.closeCaseInstance(caseInstanceId);
 
@@ -301,7 +301,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
 
   @Test
   void terminateCaseExecutionWithAuthenticatedTenant() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     caseService.terminateCaseExecution(caseInstanceId);
 
@@ -338,7 +338,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
 
   @Test
   void getVariablesWithAuthenticatedTenant() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     Map<String, Object> variables = caseService.getVariables(caseExecutionId);
 
@@ -371,7 +371,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
 
   @Test
   void getVariableWithAuthenticatedTenant() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     String variableValue = (String) caseService.getVariable(caseExecutionId, VARIABLE_NAME);
 
@@ -400,7 +400,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
 
   @Test
   void getVariableTypedWithAuthenticatedTenant() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     StringValue variable = caseService.getVariableTyped(caseExecutionId, VARIABLE_NAME);
 
@@ -429,7 +429,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
 
   @Test
   void removeVariablesWithAuthenticatedTenant() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     caseService.removeVariable(caseExecutionId, VARIABLE_NAME);
 
@@ -464,7 +464,7 @@ class MultiTenancyCaseInstanceCmdsTenantCheckTest {
 
   @Test
   void setVariableWithAuthenticatedTenant() {
-    identityService.setAuthentication("user", null, Arrays.asList(TENANT_ONE));
+    identityService.setAuthentication("user", null, List.of(TENANT_ONE));
 
     caseService.setVariable(caseExecutionId, "newVar", "newValue");
 
