@@ -15,8 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.templateengines.engine;
+import java.util.List;
 
-import java.util.Arrays;
 import java.util.Collection;
 
 import javax.script.*;
@@ -110,7 +110,7 @@ class FreeMarkerScriptEngineTest {
 
   @Test
   void javaCollection() throws Exception {
-    Collection<String> names = Arrays.asList("tweety", "duffy", "tom");
+    Collection<String> names = List.of("tweety", "duffy", "tom");
     bindings.put("names", names);
     expected = "tweety, duffy, tom";
     template = "<#list names as name>${name}<#if name_has_next>, </#if></#list>";
