@@ -15,8 +15,8 @@
  * limitations under the License.
  */
 package org.operaton.bpm.model.dmn.instance;
+import java.util.List;
 
-import java.util.Arrays;
 import java.util.Collection;
 
 public class DecisionRuleTest extends DmnModelElementInstanceTest {
@@ -28,7 +28,7 @@ public class DecisionRuleTest extends DmnModelElementInstanceTest {
 
   @Override
   public Collection<ChildElementAssumption> getChildElementAssumptions() {
-    return Arrays.asList(
+    return List.of(
       new ChildElementAssumption(InputEntry.class),
       new ChildElementAssumption(OutputEntry.class, 1)
     );
